[gd_scene load_steps=3 format=3 uid="uid://57cexesehk8a"]

[ext_resource type="Script" path="res://Main/main.gd" id="1_l66x5"]
[ext_resource type="PackedScene" uid="uid://dprcgxu5suoj3" path="res://Player/player.tscn" id="2_5kvv3"]

[node name="Main" type="Node2D"]
position = Vector2(1, 0)
script = ExtResource("1_l66x5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Control"]
modulate = Color(1, 1, 1, 0.490196)
layout_mode = 0
offset_left = 947.0
offset_top = 571.0
offset_right = 1286.0
offset_bottom = 626.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 40
text = "B11202029 范綱麟"

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 464.0
offset_top = 289.0
offset_right = 652.0
offset_bottom = 369.0

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Control/Panel"]
layout_mode = 0
offset_left = 13.0
offset_top = 23.0
offset_right = 125.0
offset_bottom = 54.0
text = "map.txt"

[node name="Button" type="Button" parent="CanvasLayer/Control/Panel"]
layout_mode = 0
offset_left = 132.0
offset_top = 24.0
offset_right = 179.0
offset_bottom = 55.0
text = "Read"

[node name="Panel2" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 59.0
offset_top = 478.0
offset_right = 267.0
offset_bottom = 608.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/Panel2"]
layout_mode = 0
offset_right = 201.0
offset_bottom = 119.0
bbcode_enabled = true
text = "當前能量:
"

[node name="Dead" type="Panel" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_left = 145.0
offset_top = 70.0
offset_right = 1014.0
offset_bottom = 579.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/Dead"]
layout_mode = 0
offset_left = 235.0
offset_top = 184.0
offset_right = 670.0
offset_bottom = 343.0
bbcode_enabled = true
text = "[font_size=80]YOU LOSE![/font_size]"

[node name="Win" type="Panel" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_left = 145.0
offset_top = 75.0
offset_right = 1019.0
offset_bottom = 581.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/Win"]
layout_mode = 0
offset_left = 266.0
offset_top = 203.0
offset_right = 691.0
offset_bottom = 325.0
bbcode_enabled = true
text = "[rainbow][wave amp=50.0 freq=5.0 connected=1][font_size=80]YOU WIN ![/font_size][/wave][/rainbow]"

[node name="Speed" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 393.0
offset_top = 561.0
offset_right = 694.0
offset_bottom = 625.0

[node name="Label" type="Label" parent="CanvasLayer/Control/Speed"]
layout_mode = 0
offset_left = 88.0
offset_top = 26.0
offset_right = 221.0
offset_bottom = 49.0
text = "MoveSpeed: 0.1 s"

[node name="HScrollBar" type="HScrollBar" parent="CanvasLayer/Control/Speed"]
layout_mode = 0
offset_left = 29.0
offset_top = 7.0
offset_right = 156.0
offset_bottom = 15.0
scale = Vector2(2, 2)
min_value = 0.01
max_value = 0.1
step = 0.01
value = 0.05

[node name="block" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Player" parent="." instance=ExtResource("2_5kvv3")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[connection signal="pressed" from="CanvasLayer/Control/Panel/Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="CanvasLayer/Control/Speed/HScrollBar" to="." method="_on_h_scroll_bar_value_changed"]
